<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookFragment"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/movie_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_movie_data"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/movie_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/movie_year_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/year"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:textSize="16sp"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:labelFor="@id/movie_rating"/>
        <RatingBar
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            />

        <Button
            android:id="@+id/movie_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/green"
            android:backgroundTint="@color/black"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>


</FrameLayout>